# ami-sh

./: .ami-shrc  .gitignore  CMakeLists.txt  README.md  shell.h
main/: CMakeLists.txt  main.c  shell.h
main/builtins/: builtins.c
main/utilities/: completion.c  config.c  executor.c  parser.c
